[package]
name = "tauri-scheduler"
version = "0.1.0"
description = "Simple \"todo\""
authors = ["alordash"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.24.1", features = ["macros"] }
rustls = "0.20.8"
chrono = { version = "0.4.19", features = ["serde"] }
getset = "0.1.2"
dotenvy = "0.15.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
